tests/invalid/import_from_call_non_function/main.py
from provider import value

x: int = value()
